# bongcloud-engine

./: .gitignore  CMakeLists.txt  main.cpp
engine/: Board.cpp  Board.hpp  Eval.cpp  Eval.hpp  Move.cpp  Move.hpp  MoveGen.cpp  MoveGen.hpp  MoveGenA.cpp  SlideAttacks.cpp  SlideAttacks.hpp  includes.hpp  main.cpp
lichess/: index.js  package-lock.json  package.json
